--- a/provisioning/roles/master/defaults/main.yml
+++ b/provisioning/roles/master/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
-USER: vagrant
-KUBEADM_INIT_SUCCESS: Your Kubernetes control-plane has initialized successfully!
+user: vagrant
+kubeadm_init_success: Your Kubernetes control-plane has initialized successfully!
