--- a/provisioning/roles/master/defaults/main.yml
+++ b/provisioning/roles/master/defaults/main.yml
@@ -1,3 +1,4 @@
 ---
 user: vagrant
 kubeadm_init_success: Your Kubernetes control-plane has initialized successfully!
+pod_network_cidr: 10.244.0.0/16
