--- a/provisioning/roles/master/tasks/main.yml
+++ b/provisioning/roles/master/tasks/main.yml
@@ -51,8 +51,13 @@
   changed_when: False
   failed_when: False
 
+- name: Get flannel yml file
+  template:
+    src: kube_flannel.j2
+    dest: /tmp/kube-flannel.yml
+
 - name: Install flannel as pod network
-  shell: kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/62e44c867a2846fefb68bd5f178daf4da3095ccb/Documentation/kube-flannel.yml
+  shell: kubectl apply -f /tmp/kube-flannel.yml
   become: yes
   become_user: '{{ user }}'
   when: "'flanneld' not in flannel_running_output.stdout"
