--- a/provisioning/roles/nodes/tasks/main.yml
+++ b/provisioning/roles/nodes/tasks/main.yml
@@ -7,8 +7,8 @@
 - name: Check if kubelet is running
   shell: ps -e | grep kubelet
   register: kubelet_pid_output
-  changed_when: False
-  failed_when: False
+  changed_when: false
+  failed_when: false
 
 - name: Join node with master
   command: "{{ hostvars['master']['kubeadm_join_command'] }}"
