--- a/provisioning/roles/docker/tasks/main.yml
+++ b/provisioning/roles/docker/tasks/main.yml
@@ -42,7 +42,7 @@
 
 - name: Add user to docker group
   user:
-    name: '{{ user }}'
+    name: '{{ ansible_user }}'
     append: true
     group: docker
 
