--- a/provisioning/roles/nodes/tasks/main.yml
+++ b/provisioning/roles/nodes/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Setup kubelet extra args
   template:
-    src: kubelet_extra_args.j2
+    src: kubelet-extra-args.j2
     dest: /etc/default/kubelet
 
 - name: Check if kubelet is running
