--- a/provisioning/master-playbook.yml
+++ b/provisioning/master-playbook.yml
@@ -3,8 +3,8 @@
   become: true
   roles:
     - geerlingguy.swap
-    - nfs
+    - nfs-server
     - docker
     - kubebin
-    - master
+    - master-config
     - helm
