Update docker handler

--- a/provisioning/roles/docker/tasks/main.yml
+++ b/provisioning/roles/docker/tasks/main.yml
@@ -50,9 +50,7 @@
   file:
     path: /etc/systemd/system/docker.service.d
     state: directory
+  notify: Restart docker
 
-- name: Restart docker
-  systemd:
-    name: docker
-    state: restarted
-    daemon_reload: true
+- name: Immediately restart docker
+  meta: flush_handlers
