--- a/provisioning/roles/load-balancer/tasks/main.yml
+++ b/provisioning/roles/load-balancer/tasks/main.yml
@@ -1,6 +1,19 @@
 ---
 - name: Helm install metallb load balancer
-  command: helm upgrade --install --namespace metallb-system metallb stable/metallb
+  command: >
+    helm upgrade
+    --install
+    --namespace metallb-system
+    --set controller.nodeSelector."kubernetes\.io/hostname"=master
+    --set controller.tolerations[0].key=node-role.kubernetes.io/master
+    --set controller.tolerations[0].operator=Exists
+    --set controller.tolerations[0].effect=NoSchedule
+    --set speaker.nodeSelector."kubernetes\.io/hostname"=master
+    --set speaker.tolerations[0].key=node-role.kubernetes.io/master
+    --set speaker.tolerations[0].operator=Exists
+    --set speaker.tolerations[0].effect=NoSchedule
+    metallb
+    stable/metallb
   environment:
     KUBECONFIG: /etc/kubernetes/admin.conf
 
