--- a/provisioning/roles/nfs-client/tasks/main.yml
+++ b/provisioning/roles/nfs-client/tasks/main.yml
@@ -3,6 +3,11 @@
   command: >
     helm upgrade
     --install
+    --namespace kube-system
+    --set nodeSelector."kubernetes\.io/hostname"=master
+    --set tolerations[0].key=node-role.kubernetes.io/master
+    --set tolerations[0].operator=Exists
+    --set tolerations[0].effect=NoSchedule
     --set nfs.server={{ private_network_ip }}
     --set nfs.path=/var/nfs/kubernetes
     nfs-client
