--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 ---
 dist: bionic
+sudo: required
 
 install:
-  - apt install yamllint
+  - sudo apt-get -y update
+  - sudo apt-get -y install yamllint
 
 script:
   - yamllint .
