--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 
 install:
   - sudo apt-get -y update
-  - sudo apt-get -y install yamllint
+  - sudo apt-get -y install yamllint virtualbox
   - sudo dpkg -i vagrant.deb
 
 script:
